# nodeditor

./: CMakeLists.txt
include/: NodeEditor.h  connection.h
include/node/: content.h  node.h  socket.h
src/: NodeEditor.cpp  connection.cpp
src/node/: content.cpp  node.cpp  socket.cpp
test/: CMakeLists.txt  main.cpp
